# apexflow

./: .dockerignore  .env.example  .firebaserc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  api.py  cloudbuild.yaml  docker-compose.ci.yml  docker-compose.vm.yml  firebase.json  pyproject.toml
agents/: base_agent.py
alembic/: env.py
config/: agent_config.yaml  models.json  profiles.yaml  sandbox_config.py  settings.defaults.json  settings.json  settings_loader.py
core/: auth.py  circuit_breaker.py  database.py  event_bus.py  gemini_client.py  graph_adapter.py  json_parser.py  logging_config.py  loop.py  metrics_aggregator.py  model_manager.py  persistence.py  scheduler.py  service_registry.py  tool_context.py  utils.py
docs/: adr-001-no-neo4j.md  database-tables.md  infrastructure-setup.md  multi-hop-search-plan.md  phase-1-bootstrap.md  phase-2-core-engine.md  phase-3-stores-services.md  phase-4a-rag.md  phase-4b-remme.md  phase-4c-sandbox.md  phase-5-deployment.md  phase-6b-email-allowlist.md  rewrite-plan.md
frontend/: .env.production  .env.production.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
memory/: context.py
prompts/: chart_agent.md  clarification.md  coder.md  debugger_agent.md  formatter.md  planner.md  retriever.md  test_agent.md
remme/: engine.py  extractor.py  staging.py  store.py  utils.py
routers/: chat.py  cron.py  inbox.py  metrics.py  news.py  prompts.py  rag.py  remme.py  runs.py  settings.py  skills.py  stream.py
scripts/: create-scann-indexes.sql  dev-start.sh  dev-stop.sh  init-db.sql  migrate.py  setup-vm.sh
services/: browser_service.py  rag_service.py  sandbox_service.py
shared/: state.py
tests/: conftest.py  test_api_boot.py  test_chat_lifecycle.py  test_concurrency.py  test_database.py  test_document_dedup.py  test_event_bus.py  test_job_lifecycle.py  test_json_parser.py  (+11 more)
(+129 files in other folders)
